--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,11 @@
   }
 }
 
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 body {
   font-family: 'Poppins', sans-serif;
   background: #fcfcfc;
