--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @-webkit-keyframes fade_move_down {
   0% {
     -webkit-transform: translate(0, -10px) rotate(45deg);
+            transform: translate(0, -10px) rotate(45deg);
     opacity: 0;
   }
   50% {
@@ -9,10 +10,10 @@
   }
   100% {
     -webkit-transform: translate(0, 10px) rotate(45deg);
+            transform: translate(0, 10px) rotate(45deg);
     opacity: 0;
   }
 }
-
 @keyframes fade_move_down {
   0% {
     -webkit-transform: translate(0, -10px) rotate(45deg);
@@ -29,13 +30,14 @@
   }
 }
 
-html, body {
+html,
+body {
   max-width: 100%;
   overflow-x: hidden;
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   background: #fcfcfc;
   color: #1d1d1d;
 }
@@ -45,7 +47,7 @@ body {
     font-size: 0.9em;
   }
   body .section {
-    padding: 2rem .5rem;
+    padding: 2rem 0.5rem;
   }
 }
 
@@ -58,8 +60,8 @@ body {
 }
 
 .button {
-  -webkit-transition: background-color .3s, color .3s;
-  transition: background-color .3s, color .3s;
+  -webkit-transition: background-color 0.3s, color 0.3s;
+  transition: background-color 0.3s, color 0.3s;
   border: none;
   font-weight: bold;
 }
@@ -158,8 +160,8 @@ body {
   font-weight: 600;
   text-transform: uppercase;
   color: white;
-  -webkit-transition: height .5s;
-  transition: height .5s;
+  -webkit-transition: height 0.5s;
+  transition: height 0.5s;
   position: absolute;
   left: 0;
   top: 0;
@@ -251,8 +253,8 @@ body {
 }
 
 .navbar .navbar-item {
-  -webkit-transition: color .3s;
-  transition: color .3s;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
 }
 
 .navbar .navbar-item:hover {
@@ -281,8 +283,8 @@ body {
   height: 132px;
   z-index: -1;
   border-radius: 50%;
-  -webkit-transition: all .5s;
-  transition: all .5s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
   -webkit-transform: translateX(0) scale(1);
           transform: translateX(0) scale(1);
   background-color: #e6cb00;
@@ -426,7 +428,7 @@ body {
 }
 
 .skill-item .title {
-  margin-bottom: .5em;
+  margin-bottom: 0.5em;
 }
 
 .skill-item:hover > .skill-details {
@@ -444,7 +446,7 @@ body {
   height: 10px;
   position: relative;
   border: 1px solid #363636;
-  border-radius: .3em;
+  border-radius: 0.3em;
   background: linear-gradient(to right, #363636 0px, #ffe200 100%);
   overflow: hidden;
   display: -webkit-box;
@@ -472,8 +474,8 @@ body {
   color: inherit;
   -webkit-box-shadow: 0 0px 15px rgba(54, 54, 54, 0.1), 0 0 0 1px rgba(54, 54, 54, 0.2);
           box-shadow: 0 0px 15px rgba(54, 54, 54, 0.1), 0 0 0 1px rgba(54, 54, 54, 0.2);
-  -webkit-transition: all .3s;
-  transition: all .3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
 .project-item:hover {
@@ -494,10 +496,10 @@ body {
   width: 256px;
   -webkit-filter: grayscale(1);
           filter: grayscale(1);
-  -webkit-transition: -webkit-filter .3s;
-  transition: -webkit-filter .3s;
-  transition: filter .3s;
-  transition: filter .3s, -webkit-filter .3s;
+  -webkit-transition: -webkit-filter 0.3s;
+  transition: -webkit-filter 0.3s;
+  transition: filter 0.3s;
+  transition: filter 0.3s, -webkit-filter 0.3s;
 }
 
 @media screen and (max-width: 1023px) {
@@ -537,7 +539,7 @@ body {
 }
 
 .project-links .button {
-  margin: 0 .5em;
+  margin: 0 0.5em;
 }
 
 .contact {
