--- a/css/style.scss
+++ b/css/style.scss
@@ -35,6 +35,11 @@ body {
   }
 }
 
+a {
+  font-weight: 700;
+  color: $primaryColor;
+}
+
 .has-text-main {
   color: $primaryColor;
 }
@@ -141,7 +146,7 @@ body {
   font-weight: 600;
   text-transform: uppercase;
   color: white;
-  transition: height 0.5s;
+  transition: height 0.3s;
   position: absolute;
   left: 0;
   top: 0;
@@ -185,15 +190,15 @@ body {
       .navbar-item {
         top: 0;
         &::after {
-          transform: translate(235px, -10px) scale(0.05);
+          transform: translate(195px, -9px) scale(0.03);
           @media screen and (max-width: 1023px) {
-            transform: translate(235px, -15px) scale(0.05);
+            transform: translate(195px, -15px) scale(0.03);
           }
           @media screen and (max-width: 768px) {
-            transform: translate(191px, -18px) scale(0.05);
+            transform: translate(195px, -18px) scale(0.03);
           }
           @media screen and (max-width: 370px) {
-            transform: translate(175px, -18px) scale(0.05);
+            transform: translate(179px, -18px) scale(0.03);
           }
         }
       }
@@ -255,6 +260,17 @@ body {
   height: 120px;
   border-radius: 50%;
   border: 4px solid $primaryColor;
+}
+
+.navbar-title {
+  margin-bottom: 0;
+  font-size: 1.25rem;
+}
+
+.navbar-subtitle {
+  color: $primaryColor;
+  font-size: 1rem;
+  display: inline;
 }
 
 .hero-main {
